Revamp the README.md; add an actual LICENSE